--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "svg-inline-loader": "^0.8.2",
     "vite": "^5.2.0"
   }
 }
